--- a/V1/src/app/pages/home/home.component.scss
+++ b/V1/src/app/pages/home/home.component.scss
@@ -6,12 +6,12 @@
     height: auto;
     box-sizing: border-box;
     margin-top: 30px;
-    // padding: 5px 10px;
+    padding: 5px 10px;
     margin-bottom: 20px;
 }
 .banner-main{
-    // display: grid;
-    // grid-template-columns: 25% 75%;
+    display: grid;
+    grid-template-columns: 25% 75%;
 }
 
 .category-area{
@@ -19,7 +19,7 @@
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    // padding-right: 15px;
+    padding-right: 15px;
 }
 .banner-category{
     display: block;
@@ -99,7 +99,7 @@
 
 .banner-data{
     display: block;
-    // padding-left: 10px;
+    padding-left: 10px;
     box-sizing: border-box;
 }
 .banner-slide-area{
@@ -108,15 +108,14 @@
 }
 .banner{
     display: grid;
-    grid-template-columns: 1fr;
-    // grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
     box-sizing: border-box;
-    // padding: 40px 55px;
-    // background-color: #fbffc8;
+    padding: 40px 55px;
+    background-color: #fbffc8;
     border-radius: 10px;
     position: relative;
     z-index: 10;
-    // height: 550px;
 }
 ::ng-deep.banner-slide-area .swiper-slide:nth-child(2) .banner{
     background-color: #c8e6ff!important;
@@ -129,7 +128,7 @@
     display: block;
     width: 100%;
     height:100%;
-    // background-image: url(../../../assets/images/products/womenOffer/banner123_4.webp);
+    background-image: url();
     position: absolute;
     top: 0px;
     left: 0px;
@@ -182,7 +181,7 @@
 .banner-data-bottom{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    // grid-gap: 25px;
+    grid-gap: 25px;
     grid-template-rows: auto;
 }
 @media(max-width:990px){
@@ -488,7 +487,7 @@
 }
 .section3-main{
     display: block;
-    background-image: url('./../../../assets/images/image/banner.jpg');
+    background-image: url();
     padding: 70px 10px;
     box-sizing:border-box ;
     text-align: center;
@@ -714,7 +713,7 @@
 /*** section-6***/
 .section-6{
    display: block;
-   margin-bottom: 115px;
+   margin-bottom: 35px;
    padding: 0px 10px;
    box-sizing: border-box;
 }
@@ -758,12 +757,12 @@
     transition: all 0.3s linear;
     transform-origin: center;
     backdrop-filter: blur(1px);
+    display: none;
 }
 .category-card:hover .link{
     transform: scale(1);
     visibility: visible;
     opacity: 1;
-    display: none;
 }
 .link a{
     display:flex;
@@ -777,10 +776,12 @@
     font-size: 18px;
     box-shadow: $box-shadow-primary;
     transition: all 0.3s linear;
+
 }
 .link a:hover{
     background-color: #fff;
     color: $color-primary;
+    display: none;
 }
 .category-body{
     display: block;
@@ -934,10 +935,10 @@
     line-height: 20px;
 }
 
-::ng-deep.section7-main.carousel .swiper-slide{
-    padding: 20px 1px 5px 1px;
-    box-sizing: border-box;
-  }
+// ::ng-deep.section7-main.carousel .swiper-slide{
+//     padding: 20px 1px 5px 1px;
+//     box-sizing: border-box;
+//   }
   @media(max-width:400px){
 
     .brand-image::after{
@@ -1034,19 +1035,19 @@
  }
 
 
-::ng-deep.section8-main.carousel .swiper-slide{
-    padding: 0px;
-}
-::ng-deep.section8-main.carousel .swiper-slide{
-    padding: 10px 1px 40px 1px;
-    box-sizing: border-box;
-  }
-  ::ng-deep.swiper-3d .swiper-slide-shadow-left{
-    display: none;
-  }
-  ::ng-deep.swiper-3d .swiper-slide-shadow-right{
-    display: none;
-  }
+// ::ng-deep.section8-main.carousel .swiper-slide{
+//     padding: 0px;
+// }
+// ::ng-deep.section8-main.carousel .swiper-slide{
+//     padding: 10px 1px 40px 1px;
+//     box-sizing: border-box;
+//   }
+//   ::ng-deep.swiper-3d .swiper-slide-shadow-left{
+//     display: none;
+//   }
+//   ::ng-deep.swiper-3d .swiper-slide-shadow-right{
+//     display: none;
+//   }
   @media(max-width:500px){
     .client-card p{
         font-size: 18px;
@@ -1071,16 +1072,388 @@
     width: 100%;
 }
 
-  @media(max-width:550px){
-    .section-7,.section-3,.section-8,.section-9,.section-2,.section-4,.section-6{
-        margin-bottom: 55px;
-    }
-    .section7-main,.section8-main,.section9-main{
-        margin-top: 30px;
-    }
-
+.section-8 .container{
+    width: 100vw;
 }
 
 
 
 
+
+.mainSlider-container img{
+    width: 100vw;
+    height: auto;
+    padding: 0 10px 0 5px;
+    object-fit: cover;
+}
+
+.angry-grid {
+    // padding-top: 30px;
+    width: 70vw;
+    height: 30vh;
+    margin: 0 15%;
+    display: grid;
+
+    // grid-template-rows: 1fr 1fr 1fr 1fr;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    gap: 40px;
+    height: 100%;
+
+    font-family:$font-en-primary ;
+ }
+ .angry-grid p{
+    font-size: 18px;
+    padding: 2px 0;
+ }
+ .angry-grid h3{
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+ }
+
+
+#item-0 {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 5;
+    grid-column-end: 4;
+ }
+
+ #item-1 {
+    grid-row-start: 1;
+    grid-column-start: 4;
+    grid-row-end: 3;
+    grid-column-end: 6;
+
+ }
+
+ #item-2 {
+    grid-row-start: 3;
+    grid-column-start: 4;
+    grid-row-end: 5;
+    grid-column-end: 6;
+ }
+
+ #item-0 img{
+    width: 100%;
+    height: 650px;
+    // object-fit: cover;
+ }
+ #item-1 img{
+    height: 300px;
+    // object-fit: cover;
+ }
+ #item-2 img{
+    height: 260px;
+    // object-fit: cover;
+ }
+
+ @media screen and (max-width: 970px) {
+    .angry-grid {
+        display: grid;
+
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        gap: 0px;
+        height: 100%;
+
+     }
+
+     #item-0 {
+
+
+        grid-row-start: 1;
+        grid-column-start: 1;
+
+        grid-row-end: 4;
+        grid-column-end: 4;
+
+     }
+     #item-1 {
+
+
+        grid-row-start: 4;
+        grid-column-start: 1;
+
+        grid-row-end: 7;
+        grid-column-end: 4;
+
+     }
+     #item-2 {
+
+
+        grid-row-start: 7;
+        grid-column-start: 1;
+
+        grid-row-end: 10;
+        grid-column-end: 4;
+
+     }
+
+     #item-0 img{
+        height: auto;
+        // object-fit: contain !important;
+        align-items: center;
+
+     }
+     #item-1 img{
+        height: auto;
+        // object-fit: contain !important;
+        align-items: center;
+
+     }
+     #item-2 img{
+        height: auto;
+        // object-fit: contain !important;
+        align-items: center;
+
+     }
+  }
+
+
+// grid 2 start
+
+  .angry-grid2 {
+    margin-top: 80px !important;
+    width: 70vw;
+    height: 30vh;
+    margin: 0 15%;
+    display: grid;
+ gap: 40px;
+    height: 100%;
+
+    font-family:$font-en-primary ;
+ }
+ .angry-grid2 p{
+    font-size: 18px;
+    padding: 2px 0;
+ }
+ .angry-grid2 h3{
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+ }
+
+
+ #item-3 {
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-row-end: 5;
+    grid-column-end: 5;
+ }
+ #item-4 {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 3;
+    grid-column-end: 3;
+ }
+ #item-5 {
+    grid-row-start: 3;
+    grid-column-start: 1;
+    grid-row-end: 5;
+    grid-column-end: 3;
+
+ }
+
+ #item-3 img{
+    width: 100%;
+    height: 655px;
+    // object-fit: contain;
+ }
+ #item-4 img{
+  width: 100%;
+    height: 280px;
+    // object-fit: contain;
+    left: 0;
+
+ }
+ #item-5 img{
+    width: 100%;
+    height: 280px;
+    // object-fit: contain ;
+ }
+
+ @media screen and (max-width: 970px) {
+    .angry-grid2 {
+        display: grid;
+
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        gap: 0px;
+        height: 100%;
+
+     }
+
+     #item-3 {
+
+
+        grid-row-start: 1;
+        grid-column-start: 1;
+
+        grid-row-end: 4;
+        grid-column-end: 4;
+
+     }
+     #item-4 {
+
+
+        grid-row-start: 4;
+        grid-column-start: 1;
+
+        grid-row-end: 7;
+        grid-column-end: 4;
+
+     }
+     #item-5 {
+
+
+        grid-row-start: 7;
+        grid-column-start: 1;
+
+        grid-row-end: 10;
+        grid-column-end: 4;
+
+     }
+
+     #item-3 img{
+        height: auto;
+        object-fit: cover;
+        align-items: center;
+
+     }
+     #item-4 img{
+        height: auto;
+        object-fit: cover;
+        align-items: center;
+
+     }
+     #item-5 img{
+        height: auto;
+        object-fit: cover;
+        align-items: center;
+
+     }
+  }
+
+
+//   banner image
+
+.banner1 {
+
+  margin: 80px 130px;
+  background-color: #f5ebdc;
+  // background-color: #f5f5f5;
+  padding: 60px;
+  // row-gap: 50px;
+}
+.banner1 img{
+    // margin: auto;
+    width: 70vw;
+    // padding: 50px;
+}
+
+
+// .new arrival section
+.new-arrival-title{
+    text-align: center;
+    font-family: $font-en-primary;
+}
+.new-arrival-title p{
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: underline;
+    letter-spacing: 1.5px;
+}
+.new-arrival-title h1{
+    padding-top: 35px;
+    font-size: 50px;
+    color: rgb(48, 48, 48);
+    letter-spacing: 1.5px;
+    font-weight: 600;
+}
+
+.new-arrival-gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+
+    padding-top: 20px;
+    display: flex;
+    flex-direction: row;
+}
+.new-arrival-gallery img{
+    width: 15vw;
+    padding: 10px;
+}
+
+
+
+.angry-grid3 {
+    padding-top: 30px;
+    width: 80vw;
+    height: 30vh;
+    margin: auto;
+    display: grid;
+
+    // grid-template-rows: 1fr 1fr 1fr 1fr;
+    // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+    gap: 40px;
+    height: 100%;
+
+ }
+
+ #item-6 {
+    width: 85%;
+// height: 30px;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 5;
+    grid-column-end: 3;
+
+    margin-bottom: 30px;
+
+ }
+ #item-7 {
+  width: 15vw;
+    grid-row-start: 1;
+    grid-column-start: 3;
+
+    grid-row-end: 3;
+    grid-column-end: 5;
+
+ }
+ #item-8 {
+  width: 15vw;
+    grid-row-start: 1;
+    grid-column-start: 5;
+    grid-row-end: 3;
+    grid-column-end: 7;
+
+ }
+ #item-9 {
+  width: 15vw;
+    grid-row-start: 1;
+    grid-column-start: 7;
+    grid-row-end: 3;
+    grid-column-end: 9;
+
+ }
+ #item-10 {
+  width: 15vw;
+    grid-row-start: 3;
+    grid-column-start: 3;
+    grid-row-end: 5;
+    grid-column-end: 9;
+
+ }
+
+ .new-arrival-title2{
+    display: flex;
+    flex-direction:column;
+    justify-content: flex-end;
+ }
